test: run version-portable specs against Spark 4 (issue #74)
pluginspark4 had no test setup, so the Spark-4 build of the plugin
source was only compile-checked, never exercised. Add a test
configuration mirroring pluginspark3 (scalatest, Spark 4.0.1 test
deps, fork + --add-opens) and pull in DataFlintCodegenFallbackSpec
so the issue #74 regression test runs against both Spark 3.5 and
Spark 4.0.

Most pluginspark3 specs depend on Spark-3-only internals (Dataset
constructor, PythonMapInArrowExec, etc.) and won't compile against
Spark 4, so the test source list is explicit rather than a directory
include — only version-portable suites are added.